# gphoto-preview

./: CMakeLists.txt  difference.cpp  main.cpp  manager.cpp  manager.h  multi-view-manager.cpp  multi-view-manager.h  stereo-capture.cpp  stereo-capture.qml  stereo-capture.qrc
